Version 2.1.189
    FlatFileDB now stores the last login of users again (was completely non functional for a while)
    Newly created flat file databases (mcmmo.users file) will have a comment line at the top noting the date the database was created
    Fixed a bug where FlatFileDatabase users could have their names saved as "null" (names will be fixed the next time the player logs in)
    Rewrote how FlatFileDatabase verifies data integrity
    (API) Added com.gmail.nossr50.database.DatabaseManager.loadPlayerProfile(org.bukkit.OfflinePlayer)
    (API) Deprecated com.gmail.nossr50.database.DatabaseManager.loadPlayerProfile(java.util.UUID, java.lang.String)
    (API) Removed com.gmail.nossr50.database.DatabaseManager.newUser(java.lang.String, java.util.UUID)
    (API) Added
    Added unit tests for FlatFileDatabaseManager (see notes)
    Fixed a bug where FlatFileDatabaseManager didn't properly upgrade older database entries to the newest schema
    The setting to disable the mcMMO user block tracker has been moved from our "hidden config" to persistent_data.yml
    Added 'mcMMO_Region_System.Enabled' to persistent_data.yml (don't touch this setting unless you know what you are doing)
    Fixed a bug that would remove components from death messages when players were killed by mobs (thanks lexikiq)
    Removed MHD command (it didn't do anything for a while now)
    Removed UltraPermissions warning
    Updated pl locale (Thanks Mich3l3k)
    Fixed an IllegalPluginAccessException error that could happen during server shutdown
    Minor performance optimizations to FlatFile database
    Minor performance optimizations to misc parts of the codebase
    Refactored a lot of code
    (API) PrimarySkillType will soon be just an enum with nothing special going on
    (API) Deprecated the members of PrimarySkillType use mcMMO::getSkillTools instead, deprecated members will be removed in Tridents & Crossbows (due soon)