@@ -10,9 +10,12 @@ import com.gmail.nossr50.util.compat.layers.persistentdata.SpigotPersistentDataL
 import com.gmail.nossr50.util.compat.layers.persistentdata.SpigotPersistentDataLayer_1_14;
 import com.gmail.nossr50.util.compat.layers.skills.AbstractMasterAnglerCompatibility;
 import com.gmail.nossr50.util.compat.layers.skills.MasterAnglerCompatibilityLayer;
+import com.gmail.nossr50.util.compat.layers.world.WorldCompatibilityLayer;
+import com.gmail.nossr50.util.compat.layers.world.WorldCompatibilityLayer_1_16_4;
 import com.gmail.nossr50.util.nms.NMSVersion;
 import com.gmail.nossr50.util.platform.MinecraftGameVersion;
 import com.gmail.nossr50.util.text.StringUtils;
+import org.bukkit.World;
 import org.bukkit.command.CommandSender;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -37,6 +40,7 @@ public class CompatibilityManager {
     private AbstractPersistentDataLayer persistentDataLayer;
     private AbstractBungeeSerializerCompatibilityLayer bungeeSerializerCompatibilityLayer;
     private AbstractMasterAnglerCompatibility masterAnglerCompatibility;
+    private WorldCompatibilityLayer worldCompatibilityLayer;
 
     public CompatibilityManager(MinecraftGameVersion minecraftGameVersion) {
         mcMMO.p.getLogger().info("Loading compatibility layers...");
@@ -67,8 +71,29 @@ public class CompatibilityManager {
         initPersistentDataLayer();
         initBungeeSerializerLayer();
         initMasterAnglerLayer();
+        initWorldCompatibilityLayer();
 
         isFullyCompatibleServerSoftware = true;
+    }
+
+    private void initWorldCompatibilityLayer() {
+        if(minecraftGameVersion.getMinorVersion().asInt() >= 16 && minecraftGameVersion.getPatchVersion().asInt() >= 4 || minecraftGameVersion.getMajorVersion().asInt() >= 2) {
+            if(hasNewWorldMinHeightAPI()) {
+                worldCompatibilityLayer = new WorldCompatibilityLayer_1_16_4();
+            }
+        } else {
+            worldCompatibilityLayer = new WorldCompatibilityLayer() {
+                @Override
+                public int getMinWorldHeight(@NotNull World world) {
+                    return WorldCompatibilityLayer.super.getMinWorldHeight(world);
+                }
+
+                @Override
+                public int getMaxWorldHeight(@NotNull World world) {
+                    return WorldCompatibilityLayer.super.getMaxWorldHeight(world);
+                }
+            };
+        }
     }
 
     private void initMasterAnglerLayer() {
@@ -78,6 +103,16 @@ public class CompatibilityManager {
             }
         } else {
             masterAnglerCompatibility = null;
+        }
+    }
+
+    private boolean hasNewWorldMinHeightAPI() {
+        try {
+            Class<?> checkForClass = Class.forName("org.bukkit.World");
+            checkForClass.getMethod("getMinHeight");
+            return true;
+        } catch (ClassNotFoundException | NoSuchMethodException e) {
+            return false;
         }
     }
 
@@ -181,5 +216,9 @@ public class CompatibilityManager {
 
     public @Nullable AbstractMasterAnglerCompatibility getMasterAnglerCompatibilityLayer() {
         return masterAnglerCompatibility;
+    }
+
+    public @NotNull WorldCompatibilityLayer getWorldCompatibilityLayer() {
+        return worldCompatibilityLayer;
     }
 }
